samples/_failures_safe/1761625628_6f297c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f473d316.c:171: error: expected ‘;’, ‘,’ or ‘)’ at end of input
